tests/paczka1/fuzzy1/10513967.err
Error in line 14: w18 S654 37,7
Error in line 28: S417 S654 76,6
Error in line 30: S417 S57 8,0
Error in line 23: yRGI9S A921 59,7
Error in line 19: bMVra S57 22,8
